fix: fix chart alignment by using fixed height and maintainAspectRatio: false

--- a/mywhiskies/static/css/main.css
+++ b/mywhiskies/static/css/main.css
@@ -2303,4 +2303,5 @@ trix-editor {
 .insights-chart-wrap {
   position: relative;
   width: 100%;
+  height: 320px;
 }
